Resolve bug de overflow-x no body.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -33,6 +33,7 @@ body {
   font-size: 16px !important;
   margin: 0;
   width: 100%;
+  overflow-x: hidden;
 }
 footer {
   background-color: $verde-claro-salic;
